--- a/css/github.css
+++ b/css/github.css
@@ -115,6 +115,7 @@ div {
 .bottom {
     display: flex;
     justify-content: space-between;
+    margin: 0 10px;
 }
 .bottom-links {
     color: blue;
