--- a/css/selectors.css
+++ b/css/selectors.css
@@ -26,6 +26,6 @@ em {
 
 /*  selector for all "anchor" elements
     that are a direct child of an element with class="article" */
-div>a {
+.article > a {
     float:right;
 }
