--- a/css/selectors.css
+++ b/css/selectors.css
@@ -8,10 +8,9 @@
 /*  selector for all "h1" elements
     that are a descendent of id="container"
     and have a class of "fancy-header" */
-h1 {
+#container>h1, .fancy-header {
     color: blue;
     text-decoration: underline;
-    position: center;
 }
 
 /* selector for all "em" elements */
@@ -26,6 +25,6 @@ em {
 
 /*  selector for all "anchor" elements
     that are a direct child of an element with class="article" */
-.article > a {
+.article>a {
     float:right;
 }
