--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,23 @@
-.d-block {
+.pizza-img {
+    background-image: url(/img/pizza.png);
     height: 346px;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
 }
 
-
+.pizza-img::after {
+    content: "Welcome to Pizza World!";
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    color: black;
+    background-color: white;
+    font-size: 45px;
+    font-weight: bold;
+    opacity: 75%;
+}
