--- a/extra-challenges/css bonus challenges/JavScript Calculator/style.css
+++ b/extra-challenges/css bonus challenges/JavScript Calculator/style.css
@@ -1,7 +1,6 @@
 :root {
   --result: #4c4c4c;
   --white: #d6d6d6;
-  --orange: #f79331;
 }
 
 body {
@@ -14,12 +13,15 @@ body {
 
 input {
   height: 2em;
-  width: 3em;
+  width: auto;
   font-size: 1em;
   text-align: center;
   box-shadow: inset 0 0 0.5em rgba(0 0 0 / 0.2);
   user-select: none;
   cursor: pointer;
+  outline: none;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 input:hover {
@@ -28,11 +30,6 @@ input:hover {
 
 input:active {
   filter: brightness(0.75);
-}
-
-input:focus {
-  outline: none;
-  user-select: none;
 }
 
 .calculator-wrapper {
@@ -46,9 +43,9 @@ input:focus {
 }
 
 .calculator-container {
-  border: 2px solid black;
+  width: fit-content;
   box-shadow: 0 0 1em rgba(0 0 0 / 0.5);
-  z-index: 1000 !important;
+  border: 3px solid black;
 }
 
 .calculator-container > {
@@ -56,30 +53,32 @@ input:focus {
   z-index: -1000;
 }
 
-.form {
+
+.result {
   display: flex;
-  flex-direction: row-reverse;
-  align-items: flex-end;
-  height: 3em;
+  justify-content: center;
+  align-items: center;
+  text-align: end;
+  width: auto;
   color: white;
   background-color: var(--result);
-  border: 3px solid black;
+  border: none;
+  padding: 0 10px !important;
 }
 
-.result-display {
-  width: 380px;
-  background-color: var(--result);
-  border: none;
-  box-shadow: none;
-  padding: 0;
-  margin: 0;
+.result-display:hover {
+  filter: brightness(1);
 }
 
 .container-inputs {
   display: flex;
   justify-content: center;
+  /* width: 100%; */
   align-items: flex-start;
-  border: 2px solid black;
+  border: none;
+  border-top: 3px solid black;
+  margin: 0;
+  padding: 0;
   user-select: none;
 }
 
@@ -88,12 +87,14 @@ input:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .white-inputs-row-1,
 .white-inputs-row-2,
 .white-inputs-row-3 {
   display: flex;
+  width: 100%;
 }
 
 .white-inputs-row-4 {
@@ -101,15 +102,14 @@ input:focus {
   width: 100%;
 }
 
-#zero {
-  flex-grow: 1;
-  user-select: none;
+#decimal {
+  flex-shrink: 2;
 }
-
 .inp-white {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   color: black;
   background: var(--white);
   border: 1px solid black;
@@ -127,6 +127,7 @@ input:focus {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 3em;
   color: black;
   background: orange;
   border: 1px solid black;
