--- a/extra-challenges/css bonus challenges/JavScript Calculator/style.css
+++ b/extra-challenges/css bonus challenges/JavScript Calculator/style.css
@@ -7,6 +7,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 2em;
   background-color: #345;
+  width: 100vw;
   margin: 0;
   padding: 0;
 }
@@ -131,4 +132,31 @@ input:active {
   color: black;
   background: orange;
   border: 1px solid black;
+}
+
+
+/* make a max width media query */
+
+@media screen and (max-width: 450px) {
+
+  body {
+    width: 100vw;
+  }
+  
+  .calculator-wrapper {
+    scale: 0.75;
+  }
+}
+
+@media screen and (max-width: 300px) {
+
+  body {
+    width: 100vw;
+  }
+  
+  .calculator-wrapper {
+    scale: 0.5;
+  }
+}
+  
 }
