--- a/extra-challenges/css bonus challenges/1_simple/street-artist-page/style.css
+++ b/extra-challenges/css bonus challenges/1_simple/street-artist-page/style.css
@@ -3,7 +3,7 @@
   --segoe: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   --background-clr: #f1f1f1;
   --red-text: #d73a65;
-  --input-border: #CCC;
+  --input-border: #ccc;
   --button: #616161;
 }
 
@@ -22,12 +22,13 @@ header {
   padding: 36px 32px;
 }
 
-.left {
-  display: inline-flex;
-}
-
-.right {
-  display: inline-flex;
+.container-menu-right {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 50em;
 }
 
 img {
@@ -40,121 +41,94 @@ img {
   width: 100%;
 }
 
-.container-pics-left {
+.flex-col {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.container-pics-right {
-  display: flex;
-  flex-direction: column;
+.wrapper-about-contact {
+  margin: 0 10em;
 }
 
 .container-about {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-size: 11px;
+}
+
+.about {
   font-family: var(--segoe);
-  font-size: 16px;
-  padding: 16px;
+  font-size: 18px;
+  margin: 3em 0 2em 0;
 }
 
-.container-about h1 {
-  font-size: 1.85vw;
-  font-family: var(--raleway);
-  font-weight: 400;
-  margin-top: 5vh;
-  margin-bottom: 4vh;
+.img-about {
+  width: 200px;
+  margin-bottom: 2em;
 }
 
-.container-about img {
-  height: 29vh;
-  width: 20.6vw;
-  /* margin: .5vh; */
-  user-select: none;
-}
-
-.container-info-contact {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 58vw;
-  font-family: var(--segoe);
-  font-size: 16px;
-  padding: 16px;
-}
-
-p {
+.bio {
+  width: 60%;
   text-align: center;
-  width: 60vw;
+  font-family: var(--segoe);
+  margin-bottom: 1em;
 }
 
 .red-text {
+  font-family: var(--segoe);
   color: var(--red-text);
-  font-size: 1.5vh;
-  font-weight: 500;
-  margin-bottom: 1.5vh;
+  margin-bottom: 1em;
 }
 
-form,
-label {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: stretch;
+.container-form {
   width: 100%;
+  font-size: 10px;
+  font-family: var(--segoe);
 }
 
-label{
-  margin-bottom: 1.5vh;
-  font-weight: bold;
-}
-
-input,
-button {
-  padding: 0;
-}
-
-input {
-  width: calc(59.5vw - 29px);
+.container-form input {
   border: 1px solid var(--input-border);
-  padding: 1em;
-  margin: 0 1em;
+  width: 100%;
+  margin-bottom: 1em;
 }
 
-input:focus {
+.container-form input:focus {
   outline: none;
 }
 
-button {
-  width:59.5vw;
-  background-color: var(--button);
+.send {
+  width: calc(100% + 6px) !important;
+  border: none !important;
   color: white;
+  font-size: 10px;
+  background-color: var(--button);
+  padding: 8px 0;
+  margin-bottom: 3em !important;
+}
+
+.powered,
+.powered a {
+  display: flex;
+  justify-content: center;
   font-family: var(--raleway);
-  border: none;
-  padding: 1vh;
-}
-
-footer {
-  margin: 3em;
-}
-
-.powered {
-  font-size: 1.2vh;
-  font-family: var(--raleway);
-}
-
-a {
+  font-size: 10px;
   color: black;
+  margin-bottom: 2.75em;
 }
+
+/* ? media queries */
 
 @media screen and (max-width: 600px) {
+  header {
+    height: 1em;
+    font-size: 1em;
+    padding: 1.5em;
+  }
+
   .wrapper-pics {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
-}
+  }
+
 }
