--- a/css/mapbox_maps_api.css
+++ b/css/mapbox_maps_api.css
@@ -4,4 +4,14 @@ body {
 
 .mapbox-h1 {
   color: blue;
+  text-shadow: 0 0 .5em rgba(0 0 0 / .2);
+}
+
+.marker {
+  background-image: url('mapbox-icon.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
 }
