--- a/css/mapbox_maps_api.css
+++ b/css/mapbox_maps_api.css
@@ -8,10 +8,17 @@ body {
 }
 
 .marker {
-  background-image: url('mapbox-icon.png');
+  background-image: url('../img/mapbox-icon.png');
   background-size: cover;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   cursor: pointer;
+}
+
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
