--- a/css/mapbox_maps_api.css
+++ b/css/mapbox_maps_api.css
@@ -8,25 +8,29 @@ body {
 }
 
 .mapbox-h1 {
-  color: blue;
-  text-shadow: 0 0 0.5em rgba(0 0 0 / 0.2);
+  color: lightblue;
 }
 
 .marker {
-  width: 37px;
-  height: 50px;
+  height: 25px;
+  width: 19px;
   background-image: url("../img/flat-design-map-pin-transparent-png-stickpng-18.png");
   background-size: cover;
   cursor: pointer;
 }
 
 .mapboxgl-popup-content {
+  background-color: #345;
+  color: white;
   border-radius: 1em;
   z-index: 10;
 }
 
 .mapboxgl-popup-close-button {
   font-size: 2em !important;
+  color: azure;
+  overflow: hidden;
+  outline: none;
 }
 
 .mapboxgl-popup-close-button:hover {
