--- a/css/mapbox_maps_api.css
+++ b/css/mapbox_maps_api.css
@@ -104,6 +104,11 @@ button {
 }
 
 .mapboxgl-popup-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: stretch;
   color: white;
   box-shadow: inset 0 0 0.5em #fff;
   background-color: #345;
@@ -125,6 +130,21 @@ button {
   overflow: hidden;
   margin: 0;
   z-index: 0;
+}
+
+.directions-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightblue;
+  border: #357 1px solid;
+  margin: 0;
+}
+
+.directions-button a {
+  font-family: sans-serif;
+  color: black;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 1200px) {
