--- a/extra-challenges/css bonus challenges/1_simple/generic-business-page/css/style.css
+++ b/extra-challenges/css bonus challenges/1_simple/generic-business-page/css/style.css
@@ -11,7 +11,6 @@ html,
 body {
   font-family: var(--primary-font);
   font-size: 20px;
-  width: 100vw;
   margin: 0;
   padding: 0;
 }
@@ -21,11 +20,23 @@ a {
   cursor: pointer;
 }
 
+h1,
+h2, 
+p,
+span {
+  user-select: text;
+}
+
+div,
+svg {
+  user-select: none;
+}
+
 /* nav bar */
 
 #navbar {
   position: fixed;
-  width: 100%;
+  width: 100vw;
   margin: 0;
   padding: 0;
 }
@@ -79,7 +90,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   padding: 5em 0;
 }
 
@@ -88,7 +99,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   background-color: var(--orange);
   padding: 2.25em 0 0 0;
 }
