--- a/extra-challenges/css bonus challenges/1_simple/generic-business-page/css/style.css
+++ b/extra-challenges/css bonus challenges/1_simple/generic-business-page/css/style.css
@@ -7,6 +7,12 @@
   --text-gray: #757575;
 }
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 html,
 body {
   font-family: var(--primary-font);
@@ -34,19 +40,16 @@ svg {
 
 /* nav bar */
 
-#navbar {
+.navbar {
   position: fixed;
-  width: 100vw;
-  margin: 0;
-  padding: 0;
-}
-
-#navbar > .container-fluid {
-  height: 2.5em;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
   background-color: var(--orange);
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
-  padding: 0;
+  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.5);
   margin: 0;
+  padding: 0;
 }
 
 .navbar-brand {
@@ -59,6 +62,8 @@ svg {
 }
 
 .navbar-nav {
+  background-color: var(--orange);
+  width: 100%;
   height: 100%;
 }
 
@@ -98,17 +103,26 @@ svg {
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 3em 0;
+  margin: 4em 0;
 }
 
 .container-start-page-contents > h1,
 .container-start-page-contents > span {
+  display: flex;
   color: white;
+}
+
+.container-start-page-contents h1 {
+  margin: 0;
 }
 
 .container-start-page-contents > h1 {
   font-weight: 100;
   font-family: var(--title-font) !important;
+}
+
+.template {
+  margin: 2em 0;
 }
 
 .get-started {
@@ -127,34 +141,49 @@ svg {
 
 /* first article */
 
-.wrapper-first-article {
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.container-fluid {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.wrapper-article {
   display: flex;
   flex-direction: row;
+  width: 70%;
   height: fit-content;
   margin: 4em 12em;
 }
 
-.wrapper-first-article h2 {
+.wrapper-article h2 {
   font-family: var(--title-font);
 }
 
 .container-articles {
   display: flex;
   flex-direction: column;
-  margin-right: 3em;
 }
 
-.container-first-article-p1 {
+.container-article-p1 {
   display: flex;
   flex-direction: column;
   font-size: 16px;
 }
 
-.container-first-article-p1 > p {
+.container-article-p1 > p {
   margin-top: 2em;
 }
 
-.container-first-article-p2 {
+.container-article-p2 {
   display: flex;
   font-size: 0.5em;
   color: var(--text-gray);
@@ -172,30 +201,10 @@ svg {
   color: var(--orange);
 }
 
-/* second article */
-
-#second-article {
-  width: 100%;
-  background-color: var(--light-gray);
+.fa-anchor {
+  margin-left: 0.25em;
 }
 
-.wrapper-second-article {
-  display: flex;
-  flex-direction: row;
-  height: fit-content;
-  margin: 4em 12em;
-}
-
-.container-second-article-p1 h2 {
-  font-family: var(--title-font);
-}
-
-.container-second-article-p1 p {
-  font-size: 16px;
-  margin-top: 2em;
-}
-
-.container-second-article-p2 p {
-  font-size: 10px;
-  margin-top: 2em;
+.fa-coffee {
+  margin-right: 0.25em;
 }
