--- a/extra-challenges/css bonus challenges/1_simple/generic-business-page/css/style.css
+++ b/extra-challenges/css bonus challenges/1_simple/generic-business-page/css/style.css
@@ -29,7 +29,9 @@ a {
 h1,
 h2,
 p,
-span {
+span,
+div,
+svg  {
   user-select: text;
 }
 
@@ -78,9 +80,6 @@ svg {
 .navbar-links:hover {
   background-color: white;
   color: black !important;
-}
-
-.navbar-toggler {
 }
 
 .navbar-toggler-icon {
@@ -139,13 +138,15 @@ svg {
   color: black;
 }
 
-/* first article */
+/* main content */
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100% !important;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .container-fluid {
@@ -207,4 +208,48 @@ svg {
 
 .fa-coffee {
   margin-right: 0.25em;
+}
+
+/* quote */
+
+.container-quote {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--dark-gray);
+  color: white;
+  padding: 3em 0;
+}
+
+/* links */
+
+.container-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3em 0;
+}
+
+.container-links > svg {
+  height: 20px;
+  width: 20px;
+  fill: var(--dark-gray);
+  margin: 0 2px;
+}
+
+.bi-snapchat {
+  fill: var(--dark-gray) !important;
+}
+
+/* powered by */
+.container-powered {
+  display: flex;
+  justify-content: center;
+  color: var(--dark-gray);
+  align-items: center;
+  /* padding: 3em 0; */
+}
+
+.container-powered a {
+  color: var(--dark-gray);
 }
