added more to 600 and below media query

--- a/extra-challenges/css bonus challenges/1_simple/generic-business-page/css/style.css
+++ b/extra-challenges/css bonus challenges/1_simple/generic-business-page/css/style.css
@@ -263,6 +263,10 @@ svg {
     background-color: var(--orange) !important;
   }
 
+  .navbar-links {
+    user-select: none;
+  }
+
   .wrapper-article {
     display: flex;
     flex-direction: column;
