--- a/extra-challenges/css bonus challenges/1_simple/coming-soon-page-completed/css/style.css
+++ b/extra-challenges/css bonus challenges/1_simple/coming-soon-page-completed/css/style.css
@@ -1,3 +1,63 @@
+body {
+  height: 100vh;
+  width: 100vw;
+  font-family: "Raleway", "sans-serif";
+  font-size: 1.5em;
+  color: white;
+  background-image: url(../forest.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0;
+  margin: 0;
+}
 
+.container-logo {
+  padding: 26px 0 0 38px;
+}
 
-/*# sourceMappingURL=style.css.map */
+.logo {
+  font-size: 1.65em;
+}
+
+.container-main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.heading {
+  font-size: 105px;
+  padding: 0;
+  margin: 0;
+}
+
+.line {
+  width: 296px;
+  margin: 34px 0;
+}
+
+.days {
+  font-weight: 100;
+  font-size: 1.25em;
+}
+
+.container-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  font-size: 25px;
+  margin: 0 0 24px 38px;
+}
+
+.link {
+  color: white;
+  cursor: pointer;
+}
