--- a/extra-challenges/css bonus challenges/1_simple/coming-soon-page-completed/css/style.css
+++ b/extra-challenges/css bonus challenges/1_simple/coming-soon-page-completed/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "Raleway", "sans-serif";
   font-size: 1.5em;
   color: white;
-  background-image: url(../forest.jpg);
+  background-image: url(../assets/images/forest.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -61,3 +61,5 @@ body {
   color: white;
   cursor: pointer;
 }
+
+/*# sourceMappingURL=style.css.map */
