--- a/extra-challenges/css bonus challenges/1_simple/coming-soon-page-completed/scss/style.scss
+++ b/extra-challenges/css bonus challenges/1_simple/coming-soon-page-completed/scss/style.scss
@@ -8,7 +8,7 @@ body {
   font-family: map-get($font-family, raleway), map-get($font-family, sans-serif);
   font-size: 1.5em;
   color: white;
-  background-image: url(../forest.jpg);
+  background-image: url(../assets/images/forest.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
