--- a/extra-challenges/css bonus challenges/1_simple/generic-business-page/src/containers/navbar/scss/style.scss
+++ b/extra-challenges/css bonus challenges/1_simple/generic-business-page/src/containers/navbar/scss/style.scss
@@ -6,25 +6,45 @@
 .Navbar__navbar {
   position: fixed;
   @include flexbox(flex, row, flex-start, center, 0);
+  height: 2em;
   width: 100%;
   background-color: map-get($colors, orange);
   @include p0m0;
 
   .Navbar__home {
+    @include flexbox(flex, row, center, center, 0);
     background-color: white;
+    height: max-content;
+    width: 3em;
+    color: black;
+    text-decoration: none;
+    text-align: center;
+    padding: 0.25em 0.75em !important;
   }
 
   .Navbar__links {
-    ul {
+    padding: 0;
+    margin: 0;
+
+    .Navbar__navbar-nav {
+      height: 100% !important;
       @include flexbox(flex, row, center, center, 0);
-      @include p0m0;
-      li {
+      padding: 0;
+      margin: 0;
+
+      .Navbar__nav-item {
+        color: white;
         list-style: none;
+        margin: 0;
+        padding: 0.25em 0.75em;
         cursor: pointer;
         &:hover {
+          color: black;
           background-color: white;
         }
       }
     }
   }
 }
+
+@import "./media-queries";
