--- a/extra-challenges/css bonus challenges/1_simple/generic-business-page/src/containers/navbar/style.css
+++ b/extra-challenges/css bonus challenges/1_simple/generic-business-page/src/containers/navbar/style.css
@@ -4,15 +4,31 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  height: 2em;
   width: 100%;
   background-color: #e25141;
   padding: 0;
   margin: 0;
 }
 .Navbar__navbar .Navbar__home {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   background-color: white;
+  height: max-content;
+  width: 3em;
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  padding: 0.25em 0.75em !important;
 }
-.Navbar__navbar .Navbar__links ul {
+.Navbar__navbar .Navbar__links {
+  padding: 0;
+  margin: 0;
+}
+.Navbar__navbar .Navbar__links .Navbar__navbar-nav {
+  height: 100% !important;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -20,11 +36,15 @@
   padding: 0;
   margin: 0;
 }
-.Navbar__navbar .Navbar__links ul li {
+.Navbar__navbar .Navbar__links .Navbar__navbar-nav .Navbar__nav-item {
+  color: white;
   list-style: none;
+  margin: 0;
+  padding: 0.25em 0.75em;
   cursor: pointer;
 }
-.Navbar__navbar .Navbar__links ul li:hover {
+.Navbar__navbar .Navbar__links .Navbar__navbar-nav .Navbar__nav-item:hover {
+  color: black;
   background-color: white;
 }
 
